opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/ocaml/dune"
bug-reports: "https://github.com/ocaml/dune/issues"
dev-repo: "https://github.com/ocaml/dune.git"
license: "MIT"
build: [
  ["ocaml" "configure.ml" "--libdir" lib]
  ["ocaml" "bootstrap.ml"]
  ["./boot.exe" "--subst"] {pinned}
  ["./boot.exe" "-j" jobs]
]
available: [ ocaml-version >= "4.02.3" ]
conflicts: [
  "jbuilder" {!= "transition"}
  "ppx_driver" {< "v0.10.3"}
  "ocaml-migrate-parsetree" {< "1.0.8"}
]
