opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/ocaml/dune"
bug-reports: "https://github.com/ocaml/dune/issues"
dev-repo: "https://github.com/ocaml/dune.git"
license: "MIT"
build: [
  ["ocaml" "configure.ml" "--libdir" lib]
  ["ocaml" "bootstrap.ml"]
  ["./boot.exe" "--release" "--subst"] {pinned}
  ["./boot.exe" "--release" "-j" jobs]
]
available: [ ocaml-version >= "4.02.3" ]
conflicts: [
  "jbuilder" {!= "transition"}
]
