opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/ocaml/dune"
bug-reports: "https://github.com/ocaml/dune/issues"
dev-repo: "https://github.com/ocaml/dune.git"
license: "Apache-2.0"
build: [
  ["ocaml" "bootstrap.ml"]
  ["./boot.exe" "--subst"] {pinned}
  ["./boot.exe" "-j" jobs]
]
build-test: [
  ["./_build/default/bin/main.exe" "runtest" "-p" name "-j" jobs]
]
depends: [
  # ocamlfind is not mandatory to build packages using
  # jbuilder. However if it is present jbuilder will use it.  Making
  # it a hard-dependency avoids problems when there is a previous
  # ocamlfind in the PATH. We make it a "build" depepdency even though
  # it is only a runtime dependency so that reinstalling ocamlfind
  # doesn't resintall jbuilder
  "ocamlfind" {build}
  "menhir" {test}
  "reason" {test}
  "ocaml-migrate-parsetree" {test}
  "ppx_driver" {test}
  "odoc" {test}
  "js_of_ocaml-compiler" {test}
  "utop" {test}
]
available: [ ocaml-version >= "4.02.3" ]
