opam-version: "1.2"
version: "transition"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/ocaml/dune"
bug-reports: "https://github.com/ocaml/dune/issues"
dev-repo: "https://github.com/ocaml/dune.git"
license: "MIT"
build: []
# CR-soon diml: uncomment this once we have a dune package in opam.
# We have to wait otherwise "opam pin add jbuilder --dev" fails with
# an error that is hard to understand.
# depends: ["dune"]
post-messages: [
  "Jbuilder has been renamed and the jbuilder package is now a transition"
  "package. Use the dune package instead."
  ""
  "If you want to try the development version of Dune before the 1.0.0 is"
  "released, run the following command:"
  ""
  "$ opam pin add dune https://github.com/ocaml/dune.git"
]
