(rule
 (mode promote)
 (targets libs.ml)
 (deps
  ../bin/main.exe
  ../dune-file
  ../dune-project
  (source_tree ../bin)
  (source_tree ../src)
  (source_tree ../otherlibs)
  (source_tree ../vendor))
 (action
  (with-stdout-to
   libs.ml
   (run
    %{dep:../bin/main.exe}
    internal
    bootstrap-info
    --no-print-directory
    --root
    %{env:PWD=.}
    --profile
    %{profile}))))

(alias
 (name runtest)
 (deps libs.ml))

(alias
 (name check)
 (deps libs.ml))

(executable
 (name duneboot)
 (modules :standard \ configure bootstrap)
 (libraries unix))

(executable
 (name configure)
 (preprocess
  (action
   (run tail -n +2 %{input-file})))
 (modules configure))

(executable
 (name bootstrap)
 (modules bootstrap))
