(rule
 (targets libs.ml.gen)
 (deps
  ../bin/main.exe
  ../dune-file
  ../dune-project
  (source_tree ../bin)
  (source_tree ../src)
  (source_tree ../otherlibs)
  (source_tree ../vendor))
 (action
  (with-stdout-to
   libs.ml.gen
   (chdir
    %{project_root}
    (progn
     ;; ugly renaming needed to prevent the inner dune being confused
     ;; that it's already built
     (bash "mv bin/main.exe bin/foo.exe")
     (no-infer
      (run
       ./bin/foo.exe
       internal
       bootstrap-info
       --no-print-directory
       --root
       .
       --profile
       dev)))))))

(alias
 (name runtest)
 (deps
  (alias check)))

(rule
 (alias check)
 (action
  (diff libs.ml libs.ml.gen)))

(ocamllex pps)

(executable
 (name duneboot)
 (modules :standard \ configure bootstrap)
 (libraries unix))

(executable
 (name configure)
 (preprocess
  (action
   (run tail -n +2 %{input-file})))
 (modules configure))

(executable
 (name bootstrap)
 (modules bootstrap))
