(executable
 (name update_version)
 (libraries stdune dune_rpc_private re))

(rule
 (deps bench.yml.in)
 (target bench.yml.gen)
 (action
  (with-stdout-to
   %{target}
   (run ./update_version.exe bench.yml.in))))

(rule
 (deps workflow.yml.in)
 (target workflow.yml.gen)
 (action
  (with-stdout-to
   %{target}
   (run ./update_version.exe workflow.yml.in))))
