(ignored_subdirs (sample-projects))

(alias
 (name runtest)
 (deps (package dune) (source_tree sample-projects/hello_world))
 (action
  (chdir sample-projects/hello_world
   (run %{exe:../test/blackbox-tests/cram.exe} -test run.t))))

(alias
 (name runtest)
 (deps (package dune) (source_tree sample-projects/with-configure-step))
 (action
  (chdir sample-projects/with-configure-step
   (run %{exe:../test/blackbox-tests/cram.exe} -test run.t))))
