(data_only_dirs sample-projects)

(rule
 (alias runtest)
 (deps
  (package dune)
  (source_tree sample-projects/hello_world))
 (action
  (chdir
   sample-projects/hello_world
   (progn
    (run dune-cram run run.t)
    (diff? run.t run.t.corrected)))))

(rule
 (alias runtest)
 (deps
  (package dune)
  (source_tree sample-projects/with-configure-step))
 (action
  (chdir
   sample-projects/with-configure-step
   (progn
    (run dune-cram run run.t)
    (diff? run.t run.t.corrected)))))
