(library
 (name        dune)
 (libraries   unix
              stdune
              fiber
              xdg
              re
              opam_file_format
              dsexp
              ocaml_config
              which_program)
 (synopsis    "Internal Dune library, do not use!")
 (preprocess  (action
               (run %{project_root}/src/let-syntax/pp.exe %{input-file}))))

(ocamllex meta_lexer glob_lexer dune_lexer)

(rule
 (targets setup.ml)
 (mode    fallback)
 (action  (copy# setup.defaults.ml setup.ml)))
