(library
 (name        dune)
 (libraries   unix
              stdune
              fiber
              dag
              memo
              xdg
              dune_re
              threads
              opam_file_format
              dune_lang
              ocaml_config
              which_program
              catapult)
 (synopsis    "Internal Dune library, do not use!")
 (preprocess  (action
               (run %{project_root}/src/let-syntax/pp.exe %{input-file}))))

(ocamllex meta_lexer glob_lexer dune_lexer ocamlobjinfo)

(rule
 (targets setup.ml)
 (mode    fallback)
 (action  (copy# setup.defaults.ml setup.ml)))
