(library
 (name        dune)
 (libraries   unix
              stdune
              dune_result
              fiber
              dag
              memo
              xdg
              dune_re
              threads.posix
              opam_file_format
              dune_lang
              ocaml_config
              wp
              catapult)
 (synopsis    "Internal Dune library, do not use!")
 (preprocess  future_syntax))

(ocamllex meta_lexer glob_lexer dune_lexer ocamlobjinfo)

(rule
 (targets setup.ml)
 (mode    fallback)
 (action  (copy# setup.defaults.ml setup.ml)))
