(executable
 (name main)
 (modules main)
 (enabled_if
  ; Currently the build of this program fails because there is a
  ; conflict between vendor/spawn and the spawn library installed in
  ; opam that core_bench depends on.
  ;
  ; There is a work in progress to "unvendor" Dune's dependencies
  ; when working on Dune to avoid such issues. See
  ; https://github.com/ocaml/dune/pull/3575
  false)
 (libraries dune_bench core_bench.inline_benchmarks))

(library
 (name fiber_bench)
 (modules fiber_bench)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries fiber stdune core_bench.inline_benchmarks))

(executable
 (name fiber_bench_main)
 (allow_overlapping_dependencies)
 (modules fiber_bench_main)
 (libraries fiber_bench core_bench.inline_benchmarks))

(executable
 (name memo_bench_main)
 (allow_overlapping_dependencies)
 (modules memo_bench_main)
 (libraries memo_bench core_bench.inline_benchmarks))
