(executable
 (name copyfile)
 (modules copyfile)
 (libraries stdune))

(executable
 (name main)
 (modules main)
 (libraries dune_bench core_bench.inline_benchmarks))

(executable
 (name memo_bench_main)
 (allow_overlapping_dependencies)
 (modules memo_bench_main)
 (libraries memo_bench core_bench.inline_benchmarks))

(library
 (name thread_pool_bench)
 (modules thread_pool_bench)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries dune_scheduler unix threads.posix core_bench.inline_benchmarks))

(executable
 (name thread_pool_bench_main)
 (allow_overlapping_dependencies)
 (modules thread_pool_bench_main)
 (libraries thread_pool_bench core_bench.inline_benchmarks))

(library
 (name digest_bench)
 (modules digest_bench)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries dune_digest stdune unix core_bench.inline_benchmarks))

(executable
 (name digest_bench_main)
 (allow_overlapping_dependencies)
 (modules digest_bench_main)
 (libraries digest_bench core_bench.inline_benchmarks))

(library
 (name path_bench)
 (modules path_bench)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries base stdune core_bench.inline_benchmarks))

(executable
 (name path_bench_main)
 (allow_overlapping_dependencies)
 (modules path_bench_main)
 (libraries path_bench core_bench.inline_benchmarks))
