(rule
 (alias runtest)
 (deps
  ./forbid-files.sh
  (:md
   (glob_files *.md)))
 (action
  (run bash ./forbid-files.sh %{md})))

(rule
 (alias runtest)
 (deps
  ./lint-change-fragments.sh
  (source_tree added)
  (source_tree changed)
  (source_tree fixed))
 (action
  (run %{bin:bash} ./lint-change-fragments.sh)))

(rule
 (alias runtest)
 (deps forbid-files.sh)
 (action
  (run %{bin:bash} -n %{deps})))

(rule
 (alias runtest)
 (deps lint-change-fragments.sh)
 (action
  (run %{bin:bash} -n %{deps})))

(rule
 (alias runtest)
 (enabled_if %{bin-available:shellcheck})
 (deps forbid-files.sh)
 (action
  (run %{bin:shellcheck} -s bash %{deps})))

(rule
 (alias runtest)
 (enabled_if %{bin-available:shellcheck})
 (deps lint-change-fragments.sh)
 (action
  (run %{bin:shellcheck} -s bash %{deps})))
